refactors user and creates sidebar

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,6 +3,11 @@
     IMAGE
   </div>
   <div class="col s6">
-    CONTENT
+    SEARCH USERS
+    <%= render 'shared/search_user_form' %>
+
+    <% @users.each do |user| %>
+      <%= link_to "#{user.email}", user_path(user) %>
+    <% end %>
   </div>
 </div>
