--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,16 +1,18 @@
+USER MESSAGES INDEX / ALL MESSAGES
+
 <div class="container">
   <div class="row">
     <div class="col s4">
-      SIDEBAR
+      <%= render 'shared/sidebar' %> 
     </div>
     <div class="col s8">
       <ul class="collection with-header">
-        <li class="collection-header"><h4>Messages</h4></li>
+        <li class="collection-header"><h4>ALL MESSAGES</h4></li>
         <% @messages.each do |message| %>
           <li class="collection-item">
             <div>
               <%= message.content %>
-              <%= link_to user_messages_url(message), class: 'secondary-content', method: :delete, data: {confirm: 'sure?'} do %>
+              <%= link_to user_messages_url(message), class: 'secondary-content', method: :delete, data: { confirm: 'sure?' } do %>
                 <i class="material-icons">
                   cancel
                 </i>
